chore: fix long lines in Activity Stream causing horizontal scroll. JT-82114  related

--- a/packages/issue-dashboard-widgets/widgets/youtrack-activities-widget/app/style/activities-widget.css
+++ b/packages/issue-dashboard-widgets/widgets/youtrack-activities-widget/app/style/activities-widget.css
@@ -342,6 +342,7 @@
 
 .aw__entry__user-activity__data__content {
   line-height: 22px;
+  word-break: break-word;
 }
 
 .aw__activity__change__field-name {
